# yImage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/models/: README.md
installer/: yImage.iss
scripts/: release.ps1  release.sh
src/: app.rs  capture.rs  document.rs  hotkeys.rs  main.rs  models.rs  registry.rs
src/i18n/: en-US.ftl  ja-JP.ftl  ko-KR.ftl  mod.rs
src/io/: load.rs  mod.rs  optimize.rs  save.rs
src/ops/: convert.rs  gif.rs  mod.rs  resize.rs
src/tools/: bg_remove.rs  draw.rs  mod.rs  mosaic.rs  obj_remove.rs
src/ui/: capture_overlay.rs  context_toolbar.rs  dialogs.rs  gif_timeline.rs  mod.rs  sidebar.rs  statusbar.rs  tabbar.rs  theme.rs  thumbnails.rs  toolbar.rs  toolpanel.rs  unified_header.rs  viewer.rs
