[package]
name = "yimage"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Fast Windows image viewer and editor"
authors = ["Youngmin Kim"]
license = "MIT"
repository = "https://github.com/youngmins/yimage"
default-run = "yimage"

[[bin]]
name = "yimage"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
    "x11",
    "wayland",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "all_loaders"] }

# Image IO and processing
ab_glyph = "0.2"
image = { version = "0.25", features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "avif",
] }
fast_image_resize = "4.2"
imageproc = "0.25"
tiny-skia = "0.11"

# Optimizers
oxipng = { version = "9.1", default-features = false, features = ["parallel"] }
mozjpeg = { version = "0.10", optional = true }
webp = "0.3"

# GIF
gif = "0.13"
color_quant = "1.1"

# ML (loaded lazily)
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "download-binaries",
    "copy-dylibs",
    "tls-native",
    "ndarray",
    "api-24",
], optional = true }
ndarray = { version = "0.16", optional = true }

# Concurrency / util
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1.19"

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"
sys-locale = "0.3"

# Errors / logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File dialogs + settings
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

# Misc
log = "0.4"
bytemuck = "1.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-capture = { version = "1.4", optional = true }
global-hotkey = { version = "0.5", optional = true }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["capture", "ai", "mozjpeg-optimize"]
capture = ["dep:windows-capture", "dep:global-hotkey"]
ai = ["dep:ort", "dep:ndarray"]
mozjpeg-optimize = ["dep:mozjpeg"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
